[metadata]
name = renaiming
version = 0.1.0
description = AI-powered utility for intelligently renaming and reorganizing files and folders.
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache License 2.0
license_file = LICENSE

[options]
install_requires =
    black
    clipboard
    flake8
    isort
    mypy
    pytest
packages = find:

